# budget-optimiser

./: .gitignore  pyproject.toml
data/: features.py  ingest.py
forecast/: evaluate.py  model.py
optimiser/: deterministic.py  risk.py  stochastic.py
scenarios/: generator.py
simulation/: incrementality.py
