[project]
name = "budget-optimiser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "lightgbm>=4.6.0",
    "mlflow>=3.13.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "plotly>=6.8.0",
    "prefect>=3.7.4",
    "pydantic>=2.13.4",
    "pyomo>=6.10.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
